--- a/live.html
+++ b/live.html
@@ -2,23 +2,6 @@
 <html>
 <head>
 </head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138231894-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138231894-1', {
-   'custom_map': {
-     'dimension8': 'Flow :: workflow name',
-     'dimension9': 'Flow :: workflow step number',
-'dimension11': 'Flow :: conversion flag',
-'dimension12': 'Content :: component name',
-'metric6': 'OSB :: service price'
-   }
-});
-</script>
 <body>	 
 	<div id="online-booking-wrapp">
 	</div>	 
@@ -32,15 +15,7 @@
 		   document.getElementById('online-booking').setAttribute("src", e.data.page);    
 	    }	 
 			
-	    if (e.data.event_id === 'scroll_top_of_el' || e.data.event_id === 'scroll_bottom_of_el') { 		
-		    gtag('event', 'workflowevent', {
-'Flow :: workflow name': 'tgb_ttc_booking', 
-'Flow :: workflow step number': 1, 
-'Flow :: conversion flag': 0, 
-'Content :: component name': 'tgb_ttc_booking'
-}
-);
-
+	    if (e.data.event_id === 'scroll_top_of_el' || e.data.event_id === 'scroll_bottom_of_el') { 			 
 			var bookingTop = document.getElementById("online-booking-wrapp").offsetTop;
 			document.getElementById("online-booking-wrapp").height = e.data.height;
 			window.scrollTo(0, bookingTop + e.data.position);
@@ -53,7 +28,7 @@
 		
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://demoivhcuk.edynamix-global.com?iframe-v2=true';		
+		var url = 'https://demosite.service123.co.uk/serviceplan/quote?iframe-v2=true';		
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
